# RAG

./: .env.confluence  .env.confluence.template  .gitignore  CHAT_README.md  CONFLUENCE_POC_README.md  DOCUMENT_ANALYSIS.md  FINAL_DOCKER_GUIDE.md  PIPELINE_FAQ.md  README.md  REQUEST.txt  WEB_INTERFACE_GUIDE.md  configure_free_llm.py  confluence_poc.py  confluence_poc_success.md  debug_confidence.py  docker_install_guide.md  example_usage.py  fix_colima_hanging.md  fix_confluence_env.py  generate_ingestion_report.py  inspect_chromadb.py  pyproject.toml  quick_confluence_test.py  requirements_streamlit.txt  setup_chromadb_webui.md  setup_confluence_poc.py  simple_chromadb_browser.py  start_browser.sh  start_chat.py  start_chromadb_server.py  start_server.py  start_web_browser.sh  streamlit_chat.py  test_anthropic.py  test_confluence_limit.py  test_confluence_setup.py  test_persistence.py  test_questions.py  test_retrieval.py  test_varied_confidence.py  (+1 more)
PRPs/: confluence-enterprise-integration.md  rag-system.md
PRPs/ai_docs/: confluence_enterprise_integration_guide.md  enterprise_data_synthesis_patterns.md  rag_800mb_optimization_guide.md
examples/: api_example.py
rag_system/: __init__.py
rag_system/api/: cli.py  client.py  run_server.py  server.py
rag_system/config/: __init__.py  settings.py
rag_system/core/: __init__.py  data_models.py  document_processor.py  evaluator.py  generator.py  models.py  pipeline.py  retriever.py
rag_system/monitoring/: __init__.py  health.py  logging_config.py  metrics.py
rag_system/storage/: __init__.py  vector_store.py
rag_system/utils/: __init__.py  logging_config.py  text_processing.py
